update all plugins

--- a/examples/datePicker.html
+++ b/examples/datePicker.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>DatePicker</title>
-    <link type="text/css" rel="stylesheet" href="/frontPage/css/content.min.css?11" />
-    <link type="text/css" rel="stylesheet" href="/js/plugin_modules/zr/css/zr.min.css" />
-    <script type="text/javascript" src="http://storage.jd.com/v1.0.0/zr.min.js"></script>
+    <link type="text/css" rel="stylesheet" href="//storage.jd.com/v2.0.0/content.min.css" />
+    <link type="text/css" rel="stylesheet" href="//storage.360buyimg.com/v2.0.0/nv.min.css" />
+    <script type="text/javascript" src="//storage.360buyimg.com/v2.0.0/nv.js"></script>
 
 </head>
 
 <body>
 <article class="c-content">
     <section class="c-title">
-        <p>DatePicker 日期控件 1.0.9+</p>
+        <p>DatePicker 日期控件 1.0.9+ </p>
         <span>输入或选择日期的控件，支持年、月、日期等类型。此控件是1.0.9+开始支持</span>
     </section>
     <div class="c-line"></div>
@@ -32,66 +32,66 @@
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
             <div style="width:240px">
-                <div class="zr-input-group">
-                    <input type="text" placeholder="Select Date" class="zr-input" id="date-1">
-                    <span class="zr-input-addon">
-                      <i class="zricon-calendar-empty"></i>
+                <div class="nv-input-group">
+                    <input type="text" placeholder="Select Date" class="nv-input" id="date-1">
+                    <span class="nv-input-addon">
+                      <i class="nvicon-calendar-empty"></i>
                     </span>
                 </div>
             </div>
             <div class="c-block-10"></div>
             <div style="width:240px">
-                <div class="zr-input-group">
-                    <input type="text" placeholder="Select DateTime" class="zr-input" id="date-2">
-                    <span class="zr-input-addon">
-                      <i class="zricon-calendar-empty"></i>
+                <div class="nv-input-group">
+                    <input type="text" placeholder="Select DateTime" class="nv-input" id="date-2">
+                    <span class="nv-input-addon">
+                      <i class="nvicon-calendar-empty"></i>
                     </span>
                 </div>
             </div>
             <div class="c-block-10"></div>
             <div style="width:240px">
-                <div class="zr-input-group">
-                    <input type="text" placeholder="YYYY-MM-DD HH:mm:ss" value="1987-07-29 06:10:38" class="zr-input" id="date-5">
-                    <span class="zr-input-addon">
-                      <i class="zricon-calendar-empty"></i>
+                <div class="nv-input-group">
+                    <input type="text" placeholder="YYYY-MM-DD HH:mm:ss" value="1987-07-29 06:10:38" class="nv-input" id="date-5">
+                    <span class="nv-input-addon">
+                      <i class="nvicon-calendar-empty"></i>
                     </span>
                 </div>
             </div>
             <div class="c-block-10"></div>
             <div style="width:240px">
-                <div class="zr-input-group">
-                    <input type="text" placeholder="Select year" class="zr-input" id="date-3">
-                    <span class="zr-input-addon">
-                      <i class="zricon-calendar-empty"></i>
+                <div class="nv-input-group">
+                    <input type="text" placeholder="Select year" class="nv-input" id="date-3">
+                    <span class="nv-input-addon">
+                      <i class="nvicon-calendar-empty"></i>
                     </span>
                 </div>
             </div>
             <div class="c-block-10"></div>
             <div style="width:240px">
-                <div class="zr-input-group">
-                    <input type="text" placeholder="Select month" class="zr-input" id="date-4">
-                    <span class="zr-input-addon">
-                      <i class="zricon-calendar-empty"></i>
+                <div class="nv-input-group">
+                    <input type="text" placeholder="Select month" class="nv-input" id="date-4">
+                    <span class="nv-input-addon">
+                      <i class="nvicon-calendar-empty"></i>
                     </span>
                 </div>
             </div>
             <div class="c-block-10"></div>
             <div style="width:240px">
-                <div class="zr-input-group">
-                    <input type="text" placeholder="Select week" value=""  class="zr-input" id="date-6">
-                    <span class="zr-input-addon">
-                      <i class="zricon-calendar-empty"></i>
+                <div class="nv-input-group">
+                    <input type="text" placeholder="Select week" value=""  class="nv-input" id="date-6">
+                    <span class="nv-input-addon">
+                      <i class="nvicon-calendar-empty"></i>
                     </span>
                 </div>
             </div>
             <div class="c-block-10"></div>
             <div style="width:360px">
-                <div class="zr-input-group zr-input zr-input-datepicker" id="date-7">
-                    <input type="text" class="zr-datepicker-range-start" placeholder="Start Date" readonly>
+                <div class="nv-input-group nv-input nv-input-datepicker" id="date-7">
+                    <input type="text" class="nv-datepicker-range-start" placeholder="Start Date" readonly>
                     —
-                    <input type="text" class="zr-datepicker-range-end" placeholder="End Date" readonly>
-                    <span class="zr-input-addon">
-                      <i class="zricon-calendar-empty"></i>
+                    <input type="text" class="nv-datepicker-range-end" placeholder="End Date" readonly>
+                    <span class="nv-input-addon">
+                      <i class="nvicon-calendar-empty"></i>
                     </span>
                 </div>
             </div>
@@ -99,72 +99,72 @@
         <div class="c-code-inner c-code-hide">
             <!--选择日期-->
             <div style="width:240px">
-                <div class="zr-input-group">
-                    <input type="text" placeholder="Select Date" class="zr-input" id="date-1">
-                    <span class="zr-input-addon">
-                      <i class="zricon-calendar-empty"></i>
+                <div class="nv-input-group">
+                    <input type="text" placeholder="Select Date" class="nv-input" id="date-1">
+                    <span class="nv-input-addon">
+                      <i class="nvicon-calendar-empty"></i>
                     </span>
                 </div>
             </div>
             <!--选择日期与时间-->
             <div style="width:240px">
-                <div class="zr-input-group">
-                    <input type="text" placeholder="Select DateTime" class="zr-input" id="date-2">
-                    <span class="zr-input-addon">
-                      <i class="zricon-calendar-empty"></i>
+                <div class="nv-input-group">
+                    <input type="text" placeholder="Select DateTime" class="nv-input" id="date-2">
+                    <span class="nv-input-addon">
+                      <i class="nvicon-calendar-empty"></i>
                     </span>
                 </div>
             </div>
             <!--读取输入框日期选择-->
             <div style="width:240px">
-                <div class="zr-input-group">
-                    <input type="text" placeholder="YYYY-MM-DD HH:mm:ss" value="1987-07-29 06:10:38" class="zr-input" id="date-5">
-                    <span class="zr-input-addon">
-                      <i class="zricon-calendar-empty"></i>
+                <div class="nv-input-group">
+                    <input type="text" placeholder="YYYY-MM-DD HH:mm:ss" value="1987-07-29 06:10:38" class="nv-input" id="date-5">
+                    <span class="nv-input-addon">
+                      <i class="nvicon-calendar-empty"></i>
                     </span>
                 </div>
             </div>
             <!--选择年-->
             <div style="width:240px">
-                <div class="zr-input-group">
-                    <input type="text" placeholder="Select year" class="zr-input" id="date-3">
-                    <span class="zr-input-addon">
-                      <i class="zricon-calendar-empty"></i>
+                <div class="nv-input-group">
+                    <input type="text" placeholder="Select year" class="nv-input" id="date-3">
+                    <span class="nv-input-addon">
+                      <i class="nvicon-calendar-empty"></i>
                     </span>
                 </div>
             </div>
             <!--选择月-->
             <div style="width:240px">
-                <div class="zr-input-group">
-                    <input type="text" placeholder="Select month" class="zr-input" id="date-4">
-                    <span class="zr-input-addon">
-                      <i class="zricon-calendar-empty"></i>
+                <div class="nv-input-group">
+                    <input type="text" placeholder="Select month" class="nv-input" id="date-4">
+                    <span class="nv-input-addon">
+                      <i class="nvicon-calendar-empty"></i>
                     </span>
                 </div>
             </div>
             <!--选择周-->
             <div style="width:240px">
-                <div class="zr-input-group">
-                    <input type="text" placeholder="Select week" class="zr-input" id="date-6">
-                    <span class="zr-input-addon">
-                      <i class="zricon-calendar-empty"></i>
+                <div class="nv-input-group">
+                    <input type="text" placeholder="Select week" class="nv-input" id="date-6">
+                    <span class="nv-input-addon">
+                      <i class="nvicon-calendar-empty"></i>
                     </span>
                 </div>
             </div>
             <!--双日历选择区间-->
             <div style="width:360px">
-                <div class="zr-input-group zr-input zr-input-datepicker" id="date-7">
-                    <input type="text" class="zr-datepicker-range-start" placeholder="Start Date" readonly>
+                <div class="nv-input-group nv-input nv-input-datepicker" id="date-7">
+                    <input type="text" class="nv-datepicker-range-start" placeholder="Start Date" readonly>
                     —
-                    <input type="text" class="zr-datepicker-range-end" placeholder="End Date" readonly>
-                    <span class="zr-input-addon">
-                      <i class="zricon-calendar-empty"></i>
+                    <input type="text" class="nv-datepicker-range-end" placeholder="End Date" readonly>
+                    <span class="nv-input-addon">
+                      <i class="nvicon-calendar-empty"></i>
                     </span>
                 </div>
             </div>
     <script type="text/javascript">
         /*
-        Zr.use("./datePicker/index",function(zr,picker){
+        Nv.use("dataPicker",function(nv,picker){
                 picker.init({
                     target:"#date-1",
                     type:"normal"
@@ -199,17 +199,13 @@
         */
     </script>
         </div>
-        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="nvicon-arrow-down"></i></a>
     </section>
     <div class="c-block-50"></div>
+
     <script type="text/javascript">
-        Zr.config({
-            baseUrl:"/js/plugin_modules/"
-        })
-    </script>
-    <script type="text/javascript">
-        Zr.ready(function(){
-            Zr.use("datePicker",function(zr,picker){
+        Nv.ready(function(){
+            Nv.use("datePicker",function(nv,picker){
                 picker.init({
                     target:"#date-1",
                     initialDate:"2018-01-21",
